# wendys

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: constants.py
src/filers/: file_fetcher.py  pickle_file_manager.py
src/learn/: file_fetcher.py  trie_builder.py
src/model/: trie.py  trie_builder.py  wendys_problem.py
src/scrape/: hitup_wendy.py  ping_wend.py
src/seek/: possibilities.py  solve_wend.py
